<resources>
    <string name="app_name">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clickmap">click the map!!</string>
    <string name="route">ROUTE</string>
    <string name="distance">DISTANCE</string>
    <string name="CarGun"><![CDATA[Car&Gun]]></string>
    <string name="dis">distance</string>
    <string name="ship">ship</string>
</resources>
