<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/re"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map.Map">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/clickmap"
        android:textAlignment="center" />

    <Button
        android:id="@+id/route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cargun"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/route" />

    <com.example.map.Map.PinView

        android:id="@+id/imageViewFullMap"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="206dp"
        app:srcCompat="@drawable/erangel"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView

        android:id="@+id/cargunview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignTop="@+id/imageViewFullMap"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/erangel"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/route"
        android:text="@string/distance" />

    <Button
        android:id="@+id/cargun"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/distance"
        android:text="@string/CarGun" />

    <Button
        android:id="@+id/ship"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/cargun"
        android:text="@string/ship" />

    <TextView
        android:id="@+id/distext"
        android:layout_width="298dp"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="405dp"
        android:layout_marginBottom="107dp"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>